[gd_scene load_steps=10 format=3 uid="uid://dlukhtdc5xlsr"]

[ext_resource type="Script" uid="uid://xgly6ivcsmm1" path="res://scripts/player/player.gd" id="1_g2els"]
[ext_resource type="PackedScene" uid="uid://pug080u7rka1" path="res://scenes/projectiles/bullet.tscn" id="2_qhqgy"]
[ext_resource type="AudioStream" uid="uid://d27qxsjf82age" path="res://assets/audio/dash.wav" id="3_gmlin"]
[ext_resource type="AudioStream" uid="uid://cjdavfp461rm6" path="res://assets/audio/laserShoot.wav" id="4_lvxji"]
[ext_resource type="AudioStream" uid="uid://yvakhu58vvok" path="res://assets/audio/death.mp3" id="5_p47bc"]
[ext_resource type="AudioStream" uid="uid://b4w2gaym87axs" path="res://assets/audio/thunder.mp3" id="6_75vfm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qhqgy"]
size = Vector2(152, 104)

[sub_resource type="Animation" id="Animation_dovo2"]
resource_name = "hide"
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.23333333),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"hide_dash_effect"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gmlin"]
_data = {
&"hide": SubResource("Animation_dovo2")
}

[node name="Player" type="CharacterBody2D" groups=["player"]]
script = ExtResource("1_g2els")
bullet = ExtResource("2_qhqgy")

[node name="AudioListener2D" type="AudioListener2D" parent="."]
current = true

[node name="Body" type="Node2D" parent="."]
position = Vector2(15.300003, 0)
rotation = 1.5707964

[node name="Nose" type="Polygon2D" parent="Body"]
color = Color(0.30656496, 0.3482002, 0.40443677, 1)
polygon = PackedVector2Array(0, -59, -8, -43, -8, 8, 0, 20, 8, 8, 8, -44)

[node name="Cockpit" type="Polygon2D" parent="Body/Nose"]
position = Vector2(0, -13)
color = Color(0.752319, 0.60286826, 0.3741441, 1)
polygon = PackedVector2Array(0, -30, -5, -22, -5, -3, 0, 5, 5, -3, 5, -22)

[node name="Body" type="Polygon2D" parent="Body"]
color = Color(0.7490196, 0.6, 0.37254903, 1)
polygon = PackedVector2Array(-8, 8, -20, 14, -20, 58, -17, 61, -14, 58, 0, 58, 14, 58, 17, 61, 20, 58, 20, 14, 8, 8, 0, 20)

[node name="BodyAccent" type="Polygon2D" parent="Body/Body"]
color = Color(0.7401768, 0.53881353, 0.33619666, 1)
polygon = PackedVector2Array(-6, 11, -5, 43, 0, 52, 5, 43, 6, 11, 0, 20)

[node name="LeftEngine" type="Polygon2D" parent="Body"]
color = Color(0.30588236, 0.34509805, 0.40392157, 1)
polygon = PackedVector2Array(-14, 54, -11, 48, -6, 48, -3, 54)

[node name="LeftExhaustLow" type="Polygon2D" parent="Body/LeftEngine"]
position = Vector2(-2.999998, 20.300003)
scale = Vector2(0.68620974, 0.68229365)
color = Color(0.7420294, 0.4182081, 0.5230039, 1)
polygon = PackedVector2Array(-13, 66, -11.999996, 73.3, -9.999996, 72.3, -9.999996, 76.3, -7.9999967, 75.3, -6.9999967, 77.3, -6, 70, -5, 71, -4, 66)

[node name="LeftExhaustAccent" type="Polygon2D" parent="Body/LeftEngine/LeftExhaustLow"]
color = Color(0.8666631, 0.60651547, 0.6834131, 1)
polygon = PackedVector2Array(-11.999997, 66, -11.999997, 67.3, -10.999996, 72.3, -9.999996, 70.3, -7.999997, 73.3, -6.999997, 67.3, -6, 69, -5, 66)

[node name="LeftExhaust" type="Polygon2D" parent="Body/LeftEngine"]
color = Color(0.7420294, 0.4182081, 0.5230039, 1)
polygon = PackedVector2Array(-13, 66, -11.999996, 78.3, -10.999996, 75.3, -9.999996, 83.3, -8.999996, 82.3, -7.999996, 87.3, -7, 80, -6, 70, -5, 71, -4, 66)

[node name="LeftExhaustAccent" type="Polygon2D" parent="Body/LeftEngine/LeftExhaust"]
color = Color(0.8666631, 0.60651547, 0.6834131, 1)
polygon = PackedVector2Array(-11.999997, 66, -10.999996, 70.3, -10.999996, 73.3, -9.999996, 75.3, -8.999996, 74.3, -7.9999967, 77.3, -7, 72, -7, 68, -6, 69, -5, 66)

[node name="LeftEngineNozzle" type="Polygon2D" parent="Body/LeftEngine"]
color = Color(0.37897637, 0.4236128, 0.4905643, 1)
polygon = PackedVector2Array(-14, 54, -14, 66, -3, 66, -3, 54)

[node name="RightEngine" type="Polygon2D" parent="Body"]
position = Vector2(17, 0)
color = Color(0.30588236, 0.34509805, 0.40392157, 1)
polygon = PackedVector2Array(-14, 54, -11, 48, -6, 48, -3, 54)

[node name="RightExhaustLow" type="Polygon2D" parent="Body/RightEngine"]
position = Vector2(-2.000001, 32.905)
scale = Vector2(0.745, 0.5)
color = Color(0.7411765, 0.41568628, 0.52156866, 1)
polygon = PackedVector2Array(-13, 66, -12, 72, -11, 71, -10, 78, -9, 77, -8, 82, -7, 77, -6, 78, -6, 72, -5, 74, -4, 66)

[node name="RightExhaustAccent" type="Polygon2D" parent="Body/RightEngine/RightExhaustLow"]
color = Color(0.8666631, 0.60651547, 0.6834131, 1)
polygon = PackedVector2Array(-11, 66, -11, 69, -10, 68, -9, 72, -8, 74, -7, 72, -7, 70, -6, 71, -5, 66)

[node name="RightExhaust" type="Polygon2D" parent="Body/RightEngine"]
color = Color(0.7411765, 0.41568628, 0.52156866, 1)
polygon = PackedVector2Array(-13, 66, -11.999997, 77.3, -10.999997, 75.3, -9.999997, 83.3, -8.999997, 80.3, -7.999997, 85.3, -7, 77, -6, 78, -5.999997, 74.3, -5, 74, -4, 66)

[node name="RightExhaustAccent" type="Polygon2D" parent="Body/RightEngine/RightExhaust"]
color = Color(0.8666631, 0.60651547, 0.6834131, 1)
polygon = PackedVector2Array(-11, 66, -10.999998, 73.3, -9.999998, 71.3, -8.999997, 75.3, -7.999997, 77.3, -7, 72, -5.999997, 73.3, -6, 71, -5, 66)

[node name="RightEngineNozzle" type="Polygon2D" parent="Body/RightEngine"]
color = Color(0.3764706, 0.42352942, 0.49019608, 1)
polygon = PackedVector2Array(-14, 54, -14, 66, -3, 66, -3, 54)

[node name="RightWing" type="Polygon2D" parent="Body"]
color = Color(0.30588236, 0.34509805, 0.40392157, 1)
polygon = PackedVector2Array(20, 18, 36, 24, 36, 59, 20, 53)

[node name="RightBlaster" type="Polygon2D" parent="Body/RightWing"]
color = Color(0.7490196, 0.6, 0.37254903, 1)
polygon = PackedVector2Array(36, 62, 36, 21, 37, 20, 41, 20, 42, 21, 42, 62, 41, 64, 37, 64)

[node name="RightBlasterBarrel" type="Polygon2D" parent="Body/RightWing/RightBlaster"]
position = Vector2(0, 5)
color = Color(0.30588236, 0.34509805, 0.40392157, 1)
polygon = PackedVector2Array(38, 15, 38, 5, 39, 3, 39, 3, 40, 5, 40, 15)

[node name="RightBlasterAccent" type="Polygon2D" parent="Body/RightWing/RightBlaster"]
color = Color(0.7372549, 0.5372549, 0.33333334, 1)
polygon = PackedVector2Array(38, 22, 38, 61, 40, 61, 40, 22)

[node name="LeftWing" type="Polygon2D" parent="Body"]
scale = Vector2(-1, 1)
color = Color(0.30588236, 0.34509805, 0.40392157, 1)
polygon = PackedVector2Array(20, 18, 36, 24, 36, 59, 20, 53)

[node name="LeftBlaster" type="Polygon2D" parent="Body/LeftWing"]
color = Color(0.7490196, 0.6, 0.37254903, 1)
polygon = PackedVector2Array(36, 62, 36, 21, 37, 20, 41, 20, 42, 21, 42, 62, 41, 64, 37, 64)

[node name="LeftBlasterBarrel" type="Polygon2D" parent="Body/LeftWing/LeftBlaster"]
position = Vector2(0, 5)
color = Color(0.30588236, 0.34509805, 0.40392157, 1)
polygon = PackedVector2Array(38, 15, 38, 5, 39, 3, 39, 3, 40, 5, 40, 15)

[node name="LeftBlasterAccent" type="Polygon2D" parent="Body/LeftWing/LeftBlaster"]
color = Color(0.7372549, 0.5372549, 0.33333334, 1)
polygon = PackedVector2Array(38, 22, 38, 61, 40, 61, 40, 22)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2(15.300003, 0)
polygon = PackedVector2Array(59, 0, -13, -42, -64, -42, -82, -8, -82, 9, -64, 42, -13, 42)

[node name="ShootLeft" type="Marker2D" parent="."]
position = Vector2(26.300003, -40)

[node name="ShootRight" type="Marker2D" parent="."]
position = Vector2(26.300003, 39)

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(310, 0)

[node name="DashCollision" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_qhqgy")

[node name="DashEffect" type="Node2D" parent="."]
visible = false

[node name="Polygon2D" type="Polygon2D" parent="DashEffect"]
position = Vector2(-2, -1)
color = Color(0.7411765, 0.41568628, 0.52156866, 1)
polygon = PackedVector2Array(-72, -10, -231, -12, -237, -8, -231, -4, -72, -6, -70, -8)

[node name="Polygon2D3" type="Polygon2D" parent="DashEffect"]
color = Color(0.9284817, 0.7755374, 0.8182348, 1)
polygon = PackedVector2Array(-76, -10, -229, -12, -234, -9, -229, -6, -76, -8, -74, -9)

[node name="Polygon2D2" type="Polygon2D" parent="DashEffect"]
position = Vector2(-2, 17)
color = Color(0.7411765, 0.41568628, 0.52156866, 1)
polygon = PackedVector2Array(-72, -10, -231, -12, -237, -8, -231, -4, -72, -6, -70, -8)

[node name="Polygon2D4" type="Polygon2D" parent="DashEffect"]
position = Vector2(0, 18)
color = Color(0.9284817, 0.7755374, 0.8182348, 1)
polygon = PackedVector2Array(-76, -10, -229, -12, -234, -9, -229, -6, -76, -8, -74, -9)

[node name="DashEffectAnimation" type="AnimationPlayer" parent="."]
root_node = NodePath("../DashEffect")
libraries = {
&"": SubResource("AnimationLibrary_gmlin")
}

[node name="DashAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_gmlin")
volume_db = -15.0

[node name="ShootAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_lvxji")
volume_db = -20.0

[node name="DeathAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_p47bc")
volume_db = -10.097

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_75vfm")
autoplay = true
parameters/looping = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
